// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductTypePage /> should render correctly when rendering type 'Cake' 1`] = `
<Container
  tag="div"
>
  <h3
    className="product-type__title"
  >
    Cakes
  </h3>
  <p
    className="product-type__description"
  >
    -- Placeholder --
  </p>
  <p
    className="product-type__filter"
  >
    To filter the products please click the pink button on the left hand side, and filter the results to your preferences.
  </p>
  <ProductsList
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    noTitle={true}
    products={
      Array [
        Object {
          "createdAt": "2020-03-09T11:54:02.873Z",
          "description": "Test test test test test test",
          "id": "8c01cf0d-9de5-4168-8143-73e1ea067ac9",
          "image": Array [
            Object {
              "bucket": "fjadecreatesmedia121747-production",
              "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584357819265-racecarcrop.jpg",
              "region": "eu-west-2",
            },
            Object {
              "bucket": "fjadecreatesmedia121747-production",
              "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584357839998-IMG_3565.JPEG",
              "region": "eu-west-2",
            },
            Object {
              "bucket": "fjadecreatesmedia121747-production",
              "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584357864535-IMG_3659.JPG",
              "region": "eu-west-2",
            },
          ],
          "price": 0,
          "setPrice": false,
          "shippingCost": 0,
          "tags": Array [
            "Cake",
            "Racing",
          ],
          "title": "Racing Cake",
          "type": "Cake",
          "updatedAt": "2020-03-16T11:24:33.081Z",
        },
      ]
    }
    type="Cake"
  />
</Container>
`;

exports[`<ProductTypePage /> should render correctly when rendering type 'Creates' 1`] = `
<Container
  tag="div"
>
  <h3
    className="product-type__title"
  >
    Creations
  </h3>
  <p
    className="product-type__description"
  >
    -- Placeholder --
  </p>
  <p
    className="product-type__filter"
  >
    To filter the products please click the pink button on the left hand side, and filter the results to your preferences.
  </p>
  <ProductsList
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    noTitle={true}
    products={
      Array [
        Object {
          "createdAt": "2020-03-09T12:51:52.637Z",
          "description": "test test test test test test test test test test",
          "id": "3e743155-95e2-4ae4-8d70-eb5cb2d0c086",
          "image": Array [
            Object {
              "bucket": "fjadecreatesmedia121747-production",
              "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106241635-IMG_0299.JPEG",
              "region": "eu-west-2",
            },
            Object {
              "bucket": "fjadecreatesmedia121747-production",
              "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106241635-IMG_0299.JPEG",
              "region": "eu-west-2",
            },
            Object {
              "bucket": "fjadecreatesmedia121747-production",
              "key": "/public/eu-west-2:1f7a6231-22c8-459a-a078-69ef91991a5e/1584106268144-IMG_0305.JPEG",
              "region": "eu-west-2",
            },
          ],
          "price": 14.5,
          "setPrice": true,
          "shippingCost": 4.5,
          "tags": Array [
            "Personalised",
            "Name",
            "Frame",
          ],
          "title": "Name Frame",
          "type": "Creates",
          "updatedAt": "2020-03-20T14:24:14.718Z",
        },
      ]
    }
    type="Creates"
  />
</Container>
`;
